# rust

./: .gitignore  README.md
.github/workflows/: audit.yml  general.yml
TheRustProgLang/: README.md
TheRustProgLang/ch15/MyBox/: Cargo.toml
TheRustProgLang/ch16/Messages/: Cargo.toml
TheRustProgLang/ch16/ThreadsMove/: Cargo.toml
TheRustProgLang/ch19/adv_macros/: Cargo.toml
ZeroToProd/: README.md
ZeroToProd/zero2prod/: Cargo.toml  Dockerfile
ZeroToProd/zero2prod/src/: configuration.rs  main.rs  startup.rs  telemetry.rs
ZeroToProd/zero2prod/tests/: health_check.rs  routes.rs
axum-webserver/: .env  Cargo.toml  dev_start.sh  readme.md  start_postgres.sh
axum-webserver/migrations/2025-08-14-230741_add_users/: up.sql
axum-webserver/migrations/2025-08-14-230746_add_todos/: up.sql
axum-webserver/src/: error.rs  main.rs  schema.rs  startup.rs
axum-webserver/src/db/: todo.rs  user.rs
axum-webserver/src/models/: todo.rs  user.rs
axum-webserver/src/routes/: health.rs  todo.rs  user.rs
axum-webserver/tests/: user_api.rs
ch10/agg_test/: Cargo.toml
ch10/longest/src/: main.rs
ch11/adder/src/: lib.rs
ch12/minigrep/src/: lib.rs
ch13/minigrep/src/: lib.rs
ch15/ConsList/: Cargo.toml
ch15/ConsList/src/: main.rs
ch15/LimitTracker/: Cargo.toml
ch15/MemoryLeak/: Cargo.toml
ch15/MemoryLeak/src/: main.rs
ch16/Mutex/src/: main.rs
ch17/AveragedCollection/: Cargo.toml
guessing_game/src/: main.rs
ownership/find_first_word/: Cargo.toml
rust-rocket-newsletter/: Cargo.toml  README.md
rust-rocket-newsletter/src/: main.rs
(+20 files in other folders)
