[package]
name = "axum-webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.12", features = ["postgres", "chrono"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
hyper = "1.6.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
